--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-.
+<!--Projekt Wilki.-->
+<!DOCTYPE html>
+<html>
+    <title>Toxicity Detection Tool</title> 
+    <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
+        <link rel="stylesheet" href="style_sheet.css">
+    <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+    </head>
+    <body>
+        <!--Menu-->
+        <div class="main_title">
+            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="technology"  style="width:100%;">
+            <div class="centered">Toxicity Detection Tool</div>
+          </div>
+        <hr>
+            <h2>What's toxicity?</h2>
+            <p>Sample Text</p>
+        <hr>
+            <h2>Why would you want to detect toxicity?</h2>
+            <p>Sample Text</p>
+        <hr>            
+            <h2>How does it work?</h2>
+            <p>Sample Text</p>
+        <hr>
+        <h2>Insert your text here:</h2>
+        <!--Box-->
+
+        
+    </body>
+</html>
