with the text from Ania added to the buttons

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
         <p>All you wanted to know about toxicity:</p>
         <button class="collapsible">What's toxicity?</button>
         <div class="content">
-          <p> Sample text </p>
+            <p>We live during the time of significant growth of the Internet and social media usage. It is undeniable that worldwide communication and creating complex community became crucial in our everyday live. 
+            <br>
+            People's usage of the internet includes posting and commenting someone's activity on different portals. Being online gives us opportunity to express our opinions anonymously, which causes in growing presence of hate speech. 
+            <br>
+            According to the website of a <a href='https://support.perspectiveapi.com/s/' target='_blank'>Perspective API</a> toxicity might be explained as: "a rude, disrespectful, or unreasonable comment that is likely to make you leave discussion."
+            </p>
         </div>
         <button class="collapsible">Why would you want to detect toxicity?</button>
         <div class="content">
-          <p> Sample text </p>
+            <p>Nowadays, websites try to put a lot of focus on supervising users' safety. Creators as well as whole communities have to face increasing amount of hate speech present in the comments. Therefore, moderating and monitoring these toxic comments is such a crucial issue. That type of content is often full of aggression, racism and other dangerous aspects which has damaging impact on the users' psyche health. 
+                On the other hand, this type of comments does not encourage users to take their part in different discussions.  
+            </p>
         </div>
         <button class="collapsible">How does it work?</button>
         <div class="content">
