navigation menu at the top

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!--Projekt Wilki.-->
 <!DOCTYPE html>
 <html>
+
+    <div class="topnav">
+        <a class="active" href="#home">Toxicity Detection Tool</a>
+        <a href="#Product">Product</a>
+        <a href="#News">News</a>
+        <a href="#Testimonials">Testimonials</a>
+        <a href="#About us">About us</a>
+      </div>
+
     <title>Toxicity Detection Tool</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
         <link rel="stylesheet" href="style_sheet.css">
