zmiana do css i linki

--- a/about_us.html
+++ b/about_us.html
@@ -3,9 +3,9 @@
 
     <div class="topnav">
         <a href="./index.html">Toxicity Detection Tool</a>
-        <a href="#Product">Product</a>
-        <a href="#News">News</a>
-        <a href="#Testimonials">Testimonials</a>
+        <a href="./product.html">Product</a>
+        <a href="./news.html">News</a>
+        <a href="./testimonials.html">Testimonials</a>
         <a class="active" href="./about_us.html">About us</a>
       </div>
 
