--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     <div class="topnav">
         <a class="active" href="#home">Toxicity Detection Tool</a>
-        <a href="#Product">Product</a>
-        <a href="#News">News</a>
-        <a href="#Testimonials">Testimonials</a>
+        <a href="./product">Product</a>
+        <a href="./news">News</a>
+        <a href="./testimonials">Testimonials</a>
         <a href="./about_us.html">About us</a>
       </div>
 
