--- a/testimonials.html
+++ b/testimonials.html
@@ -9,7 +9,8 @@
         <a href="./about_us.html">About us</a>
       </div>
 
-    <title>About us</title> 
+
+    <title>Testimonials</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
         <link rel="stylesheet" href="style_sheet.css">
     <head>
@@ -18,8 +19,8 @@
     <body>
         <!--Menu-->
         <div class="main_title">
-            <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="technology"  style="width:100%;">
-            <div class="centered">About us</div>
+            <img src="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="technology"  style="width:100%;">
+            <div class="centered">Testimonials</div>
           </div>
         <hr>
         
