--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!--Projekt Wilki.-->
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="style_sheet.css">
 
-    <div class="topnav">
-        <a class="active" href="#home">Toxicity Detection Tool</a>
-        <a href="./product.html">Product</a>
-        <a href="./news.html">News</a>
-        <a href="./testimonials.html">Testimonials</a>
-        <a href="./product">Product</a>
-        <a href="./news">News</a>
-        <a href="./testimonials">Testimonials</a>
-        <a href="./about_us.html">About us</a>
-      </div>
+  <div class="topnav">
+    <a href="./index.html">Toxicity Detection Tool</a>
+    <a href="./product">Product</a>
+    <a href="./news">News</a>
+    <a href="./testimonials">Testimonials</a>
+    <a href="./about_us.html">About us</a>
+  </div>
 
+  <div class="tab_title">
     <title>Toxicity Detection Tool</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
-        <link rel="stylesheet" href="style_sheet.css">
-    <head>
+  </div>  
+
+  <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
-    </head>
-    <body>
-        <!--Menu-->
-        <div class="main_title">
-            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="technology"  style="max-width:100%;height:auto;">
-            <div class="centered">Toxicity Detection Tool</div>
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-          </div>
-        <hr>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+  </head>
+    
+  <body>
+    <!--Menu-->
+    <div class="main_title">
+      <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" alt="technology"  style="max-width:100%;height:auto;">
+      <div class="centered">Toxicity Detection Tool</div>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+      <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    </div>
+
 
 <p>All you wanted to know about toxicity:</p>
             
