Kosmetyczne poprawki na indexie, zmienione tła

--- a/about_us.html
+++ b/about_us.html
@@ -6,10 +6,8 @@
         <a href="./product.html">Product</a>
         <a href="./news.html">News</a>
         <a href="./testimonials.html">Testimonials</a>
-        <a href="./about_us.html">About us</a>
-        <a class="active" href="./about_us.html">About us</a>
-
-      </div>
+        <a class = "chosen_one" href="./about_us.html">About us</a>
+    </div>
 
     <title>About us</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
@@ -20,7 +18,7 @@
     <body>
         <!--Menu-->
         <div class="main_title">
-            <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="technology"  style="width:100%;">
+            <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/about_us.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">About us</div>
           </div>
         <hr>
