--- a/product.html
+++ b/product.html
@@ -3,8 +3,7 @@
 
     <div class="topnav">
         <a href="./index.html">Toxicity Detection Tool</a>
-        <a href="./product.html">Product</a>
-        <a class="active" href="./product.html">Product</a>
+        <a class = "chosen_one" href="./product.html">Product</a>
         <a href="./news.html">News</a>
         <a href="./testimonials.html">Testimonials</a>
         <a href="./about_us.html">About us</a>
@@ -20,7 +19,7 @@
     <body>
         <!--Menu-->
         <div class="main_title">
-            <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="technology"  style="width:100%;">
+            <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/product.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">Product</div>
           </div>
         <hr>
