--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@
         <a href="./index.html">Toxicity Detection Tool</a>
         <a href="./product.html">Product</a>
         <a href="./news.html">News</a>
-        <a href="./testimonials.html">Testimonials</a>
+        <a class = "chosen_one" href="./testimonials.html">Testimonials</a>
         <a href="./about_us.html">About us</a>
       </div>
 
@@ -19,7 +19,7 @@
     <body>
         <!--Menu-->
         <div class="main_title">
-            <img src="https://images.unsplash.com/photo-1543269865-cbf427effbad?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="technology"  style="width:100%;">
+            <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/testimonials.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">Testimonials</div>
           </div>
         <hr>
