--- a/about_us.html
+++ b/about_us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="style_sheet.css">
 
     <div class="topnav">
         <a href="./index.html">Toxicity Detection Tool</a>
@@ -9,18 +10,28 @@
         <a class = "chosen_one" href="./about_us.html">About us</a>
     </div>
 
-    <title>About us</title> 
-    <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
-        <link rel="stylesheet" href="style_sheet.css">
+    <div class="tab_title">
+        <title>About us</title> 
+        <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
+    </div>        
+
     <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     </head>
+
     <body>
-        <!--Menu-->
         <div class="main_title">
             <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/about_us.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">About us</div>
           </div>
+
+
+
+
+
+
+          
         <hr>
         
     </body>
