--- a/testimonials.html
+++ b/testimonials.html
@@ -9,13 +9,16 @@
         <a href="./about_us.html">About us</a>
       </div>
 
-
+    <div class="tab_title">
     <title>Testimonials</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
-        <link rel="stylesheet" href="style_sheet.css">
+    </div>
+
+    <link rel="stylesheet" href="style_sheet.css">
     <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
-    </head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
+  </head>
     <body>
         <!--Menu-->
         <div class="main_title">
