Poprawiłam błędy, dodałam resztę odnośników na podstronach

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <a href="./about_us.html">About us</a>
   </div>
 
+  
   <div class="tab_title">
     <title>Toxicity Detection Tool</title> 
-  </div>  
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
-    
+  </div>  
 
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,10 +24,11 @@
     
   <body>
     <div class="main_title">
-      <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/index.jpg?raw=true" alt="technology"  style="max-width:100%;height:auto;">
-      <div class="centered">Toxicity Detection Tool<br></div>
-
+      <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/index.jpg?raw=true" alt="technology"  style="width:100%;">
+      <div class="centered">Toxicity Detection Tool</div>
       <a class ="reference1" href="#main_info"><br><br><br>Get started!</a>
+  </div>
+  
 
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
