--- a/product.html
+++ b/product.html
@@ -22,8 +22,9 @@
         <div class="main_title">
             <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/product.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">Product</div>
+            <a class ="reference1" href="#product_info"><br><br><br>Get to know our product!</a>
           </div>
         <hr>
-        
+        <h1 id="product_info">Bla bla bla</h1>
     </body>
 </html>
