--- a/testimonials.html
+++ b/testimonials.html
@@ -24,8 +24,9 @@
         <div class="main_title">
             <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/testimonials.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">Testimonials</div>
+            <a class ="reference1" href="#testimonials_info"><br><br><br>Meet our customers!</a>
           </div>
         <hr>
-        
+        <h1 id="testimonials_info">Bla bla bla</h1>
     </body>
 </html>
