--- a/about_us.html
+++ b/about_us.html
@@ -24,31 +24,42 @@
         <div class="main_title">
             <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/about_us.jpg?raw=true" alt="technology"  style="width:100%;">
             <div class="centered">About us</div>
+            <a class ="reference1" href="#profile_info"><br><br><br>Get to know us!</a>
         </div>
-        <h2>Bla bla</h2>
-            <h1>Kasia A.</h1>
-                <div class="profile_photo">
-                    <center><span class="dot"></span></center>
-                    <center><img src="https://media-exp1.licdn.com/dms/image/C4E03AQFkb4yrjU_Eow/profile-displayphoto-shrink_800_800/0/1633456297013?e=1640822400&v=beta&t=E7iaxJPXpaZerTGO2KQ1kfHKuzovgUvD9i1zV3mP4Vk" alt="profile_pic"/></center><br><br>
-                </div>
+        <h2 id = "profile_info">Bla bla</h2>
+
+        <h1>Kasia A.</h1>
+        <center><div class="cool_photo">
+            <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
+            <div class="overlay">
+              <div class="text">Hello World</div>
+            </div>
+          </div></center>
+
 
             <h1>Ania C.</h1>
-                <div class="profile_photo">
-                    <center><span class="dot"></span></center>
-                    <center><img src="https://media-exp1.licdn.com/dms/image/C4E03AQFkb4yrjU_Eow/profile-displayphoto-shrink_800_800/0/1633456297013?e=1640822400&v=beta&t=E7iaxJPXpaZerTGO2KQ1kfHKuzovgUvD9i1zV3mP4Vk" alt="profile_pic"/></center><br><br>
+            <center><div class="cool_photo">
+                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
+                <div class="overlay">
+                  <div class="text">Hello World</div>
                 </div>
+              </div></center>
 
             <h1>Kasia S.</h1>
-                <div class="profile_photo">
-                    <center><span class="dot"></span></center>
-                    <center><img src="https://media-exp1.licdn.com/dms/image/C4E03AQFkb4yrjU_Eow/profile-displayphoto-shrink_800_800/0/1633456297013?e=1640822400&v=beta&t=E7iaxJPXpaZerTGO2KQ1kfHKuzovgUvD9i1zV3mP4Vk" alt="profile_pic"/></center><br><br>
+            <center><div class="cool_photo">
+                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
+                <div class="overlay">
+                  <div class="text">Hello World</div>
                 </div>
+              </div></center>
 
             <h1>Marika L.</h1>
-                <div class="profile_photo">
-                    <center><span class="dot"></span></center>
-                    <center><img src="https://media-exp1.licdn.com/dms/image/C4E03AQFkb4yrjU_Eow/profile-displayphoto-shrink_800_800/0/1633456297013?e=1640822400&v=beta&t=E7iaxJPXpaZerTGO2KQ1kfHKuzovgUvD9i1zV3mP4Vk" alt="profile_pic"/></center><br><br>
+            <center><div class="cool_photo">
+                <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
+                <div class="overlay">
+                  <div class="text">Hello World</div>
                 </div>
+              </div></center>
 
 
 
