--- a/news.html
+++ b/news.html
@@ -14,6 +14,7 @@
     <title>News</title> 
     <link rel="icon" type="image/png" href="https://cdn2.iconfinder.com/data/icons/conceptual-mixed-2/50/frustration-angry-face-avatar-emoticon-512.png" sizes="16x10">
 
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
@@ -23,8 +24,10 @@
   <div class="main_title">
     <img src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Backgrounds%20and%20pictures/news.jpg?raw=true" alt="technology"  style="width:100%;">
     <div class="centered">News</div>
+    <a class ="reference1" href="#news_info"><br><br><br>What's new!</a>
   </div>
-
+  <hr>
+  <h1 id="news_info">Bla bla bla</h1>
 
 
 
