--- a/about_us.html
+++ b/about_us.html
@@ -32,7 +32,7 @@
         <center><div class="cool_photo">
             <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
             <div class="overlay">
-              <div class="text">Hello World</div>
+              <div class="text">Hello World, I'm Kasia</div>
             </div>
           </div></center>
 
@@ -41,7 +41,7 @@
             <center><div class="cool_photo">
                 <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
                 <div class="overlay">
-                  <div class="text">Hello World</div>
+                  <div class="text">Hello World, I'm Ania</div>
                 </div>
               </div></center>
 
@@ -49,7 +49,17 @@
             <center><div class="cool_photo">
                 <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
                 <div class="overlay">
-                  <div class="text">Hello World</div>
+                  <div class="text"> I am an English translator with several years of <br>
+                    experience, however, currently, my attention <br>
+                    is mainly focused on natural language <br>
+                    processing. I participated in several <br>
+                    translation projects (mostly related to the <br>
+                    translation of literature and games). I have <br>
+                    also been editing and proofreading texts in <br>
+                    the past. New technologies have recently <br>
+                    become my interest, therefore, I try to create <br>
+                    my programming projects. 
+                    </div>
                 </div>
               </div></center>
 
@@ -57,7 +67,7 @@
             <center><div class="cool_photo">
                 <img class="profile_photo" src="https://github.com/NLP-UG-2020-21/Wilki_Project/blob/main/Profile%20photos/ania.jpg?raw=true" alt="profile_photo"/>
                 <div class="overlay">
-                  <div class="text">Hello World</div>
+                  <div class="text">Hello World, I'm Marika</div>
                 </div>
               </div></center>
 
