--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
     </div>
 
                 <!--Box-->
-                    <form action="/html/tags/html_form_tag_action.cfm" method="post"> <br>
+                    
                       <h1> Try it out! Insert your text here: </h1>
+                      <form action="/html/tags/html_form_tag_action.cfm" method="post" id ="textbox1"> <br>
                       <br>
                       <textarea name="textbox" id="textbox">
                       </textarea><br />
+                      <hr>
                       <input type="submit" value="Submit" />
                      </form>
                     <script>
@@ -89,6 +91,18 @@
                          });
                        }
                     </script>
+        <div>
+          <!-- DARK MODE -->
+          <br>
+          <button class='ten' onclick='darkMode()'>Dark mode</button>
+          <script>
+            function darkMode() {
+              var element = document.body;
+              element.classList.toggle('dark-mode');
+            }
+      
+          </script>
+        </div>
 <script src="java.js"></script>
     </body>
 </html>
